phase 5: guest Vourchers part 2